--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
   </head>
 
 <body>
-
+	<!-- 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -54,11 +54,11 @@
               <li><a href="#about">A propos</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
         </div>
       </div>
     </div>
-
+	-->
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
