Update with generation date

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Elasticsearch France 2012</p>
+        <p>&copy; Elasticsearch France 2012 - {% render_time page rendered at: %}</p>
       </footer>
 
     </div><!--/.fluid-container-->
