--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,9 @@ layout: default
       <time datetime="{{ post.date | date:'%Y-%m-%d' }}" pubdate="pubdate">{{ post.date | date_to_string }}</time>
       <span class="author"><a href="/authors.html#{{ post.author }}">{{ site.authors[post.author].fullname }}</a></span>
       <span class="comments"><a href="#disqus_thread" title="Voir les commentaires">Commentaires</a></span>
+{% if post.source %} 
+<br/>Source : <a href="{{ post.source }}">{{ post.source }}</a>
+{% endif %}
     </p>    
     
 {% if post.image %} 
