--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,9 +73,16 @@
 
       <hr>
 
-      <footer>
-        <p>&copy; Elasticsearch France 2012</p>
-      </footer>
+      <div class="row-fluid">
+        <div class="span6">.: Elasticsearch France 2012 :.</div>
+        <div class="span6">
+        <p align="right">
+				<a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Licence Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by/2.0/fr/88x31.png" /></a><br />
+				Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">Licence Creative Commons Attribution 2.0 France</a>.
+		</p>
+        </div>
+
+      </div><!--/row-->
 
     </div><!--/.fluid-container-->
 
