--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,11 +1,20 @@
 <ul class="nav nav-list">
-  <li class="nav-header">Elasticsearch</li>
-{% assign submenuitem = 'elasticsearch' %}
-{% include navbar_sub.html %}  
-  <li class="nav-header">Trucs et astuces</li>
-{% assign submenuitem = 'trucs' %}
-{% include navbar_sub.html %}  
-  <li class="nav-header">Contacts</li>
-{% assign submenuitem = 'contacts' %}
-{% include navbar_sub.html %}  
+  {% for menu in site.navigation %}
+  <li class="nav-header">{{ menu[0] }}</li>
+    {% for link in menu[1] %}
+      {% assign current = nil %}
+      {% if page.url == link[1].url or page.layout == link[1].layout %}
+        {% assign current = 'active' %}
+      {% endif %}
+      <li class="{{ current }}">
+      {% if link[1].url <> 'notyet' %}
+      <a href="{{ link[1].url }}">
+      {% endif %}
+		{{ link[1].texte }}
+      {% if link[1].url <> 'notyet' %}
+      </a>
+      {% endif %}
+      </li>
+    {% endfor %}
+  {% endfor %}
 </ul>
