Navbar order management

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
       {% endif %}
       <li class="{{ current }}">
       {% if link.url <> 'notyet' %}
-      <a href="{{ link[1].url }}">
+      <a href="{{ link.url }}">
       {% endif %}
 		{{ link.texte }}
       {% if link.url <> 'notyet' %}
