Manage blog menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,65 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <title>Elasticsearch France -  {{ page.title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Elasticsearch France User Group {{ page.title }}">
-    <meta name="author" content="elasticsearchfr">
-
-    <!-- Le styles -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/elasticsearchfr.css" rel="stylesheet">
-    <link href="/css/syntax.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-    </style>
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <!-- link rel="shortcut icon" href="/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-57-precomposed.png"-->
-  </head>
-
-<body>
-	<!-- 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Elasticsearch France</a>
-          <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
-              <a href="#" class="navbar-link">Se connecter</a>
-            </p>
-            <ul class="nav">
-              <li class="active"><a href="/">Accueil</a></li>
-              <li><a href="#about">A propos</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-	-->
+{% include site_header.html %}
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
@@ -71,41 +10,5 @@
 			  {{ content }}
         </div><!--/span-->
       </div><!--/row-->
-
-      <hr>
-
-      <div class="row-fluid">
-        <div class="span6">.: Elasticsearch France 2012 :.</div>
-        <div class="span6">
-        <p align="right">
-				<a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/"><img alt="Licence Creative Commons" style="border-width:0" src="http://i.creativecommons.org/l/by/2.0/fr/88x31.png" /></a><br />
-				Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by/2.0/fr/">Licence Creative Commons Attribution 2.0 France</a>.
-		</p>
-        </div>
-
-      </div><!--/row-->
-
     </div><!--/.fluid-container-->
-
-    <!-- Le javascript
-    ================================================== -->
-  
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/jquery-1.8.1.min.js"></script>
-    <script src="/js/tags.js"></script>
-    <script src="/js/authors.js"></script>
-    <!-- script src="/js/bootstrap-transition.js"></script>
-    <script src="/js/bootstrap-alert.js"></script>
-    <script src="/js/bootstrap-modal.js"></script>
-    <script src="/js/bootstrap-dropdown.js"></script>
-    <script src="/js/bootstrap-scrollspy.js"></script>
-    <script src="/js/bootstrap-tab.js"></script>
-    <script src="/js/bootstrap-tooltip.js"></script>
-    <script src="/js/bootstrap-popover.js"></script>
-    <script src="/js/bootstrap-button.js"></script>
-    <script src="/js/bootstrap-collapse.js"></script>
-    <script src="/js/bootstrap-carousel.js"></script>
-    <script src="/js/bootstrap-typeahead.js"></script-->
-
-  </body>
-</html>
+{% include site_footer.html %}
